# hfsd

./: README.md  example.py  example_vision.py  pyproject.toml
hf_speculative_decoding/: __init__.py  speculative_decoding.py
